@@ -5,4 +5,4 @@ set -eux
 REPO="$(realpath "$(dirname "$(realpath "$0")")/..")"
 if [ -f "$REPO/Makefile" ]; then make -C "$REPO" distclean; fi
 
-"$REPO/configure" --enable-tests-all
+"$REPO/configure" --enable-tests
