@@ -1,6 +1,7 @@
 2022-05-24  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* src/multiboot2/info_is_valid.c: Fix division by zero
+	* configure.ac: Test options made stable
 
 2022-02-10  Alex Kotov  <kotovalexarian@gmail.com>
 
